resource-infra-aks/service-infra-whoami/test-infra-whoami-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-infra-whoami
  namespace: service-infra-whoami
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`difyai.difyabdevuseast2001.com`)
      kind: Rule
      services:
        - name: service-cip-infra-whoami
          port: 80
          namespace: service-infra-whoami
